--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Editing "<%= @post.title %>"</h2>
-<%= form_tag post_path(@post), method: "patch" do %>
+<h2>Create a Post</h2>
+<%= form_tag posts_path, method: "post" do %>
 <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2>There were some errors:</h2>
@@ -10,12 +10,12 @@
       </ul>
     </div>
     <% end %>
-  <div class="field<%= ' field_with_errors' if @post.errors[:title].any? %>">
+    <div class="field<%= ' field_with_errors' if @post.errors[:title].any? %>">
     <%= label_tag "title", "Title" %>
     <%= text_field_tag "title", @post.title %>
   </div>
 
-  <div class="field <%= ' field_with_errors' if @post.errors[:category].any? %>">
+  <div class="field<%= ' field_with_errors' if @post.errors[:category].any? %>">
     <%= label_tag "category", "Category" %>
     <p>Must be either "Fiction" or "Non-Fiction".</p>
     <%= text_field_tag "category", @post.category %>
@@ -32,4 +32,3 @@
   </div>
   <%= submit_tag "Update" %>
 <% end %>
-
